--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <font color ="black" size =6>
-<img src= "nigga.png" border="5">
+<img src= https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQeW11zmHI_OrC5oXIu4Ht2-zNotnx6doMVZTWRrra1iA&s border="5">
 <h1>
 <strong>I HATE NIGGERS</strong>
 </h1>
